1.配置负载均衡算法 2.替换内置默认容器  undertow 3.加载顶部中部类目

--- a/freshmalltest/freshmall-content-service/pom.xml
+++ b/freshmalltest/freshmall-content-service/pom.xml
@@ -16,9 +16,22 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
     <dependencies>
+        <!--Web starter-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!--替换内置默认容器  undertow-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
         <!-- Mysql的驱动-->
         <dependency>
