--- a/freshmalltest/freshmall-admin-web/pom.xml
+++ b/freshmalltest/freshmall-admin-web/pom.xml
@@ -21,9 +21,22 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <!--Web starter-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!--替换内置默认容器  undertow-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
         <!--nacos服务注册与发现 -->
         <dependency>
